# wayland-compositor

./: .clang-format  .clangd  CMakeLists.txt  README.md
cmd/: dconfigure.sh  drun.sh  gen_headers.sh  run.sh  test-server.sh
src/: entry.c  xdg-shell-protocol.h
test-server/: entry.c
